--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include README.md requirements.txt LICENSE
 
 recursive-include petljadoc/bootstrap_petlja_theme theme.conf *.html 
-recursive-include runestone_ext *.js *.css *.txt
+recursive-include petljadoc/runestone_ext *.js *.css *.txt
 
 graft petljadoc/bootstrap_petlja_theme/static
 graft petljadoc/project-templates 
