--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 sphinx>=1.8.5
+paver>=1.3
+sphinx-autobuild>=0.7.1
 runestone @ git+https://github.com/Petlja/RunestoneComponents-Petlja
 click>=7.0
