--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-sphinx>=1.8.5
+sphinx>=1.8.5,<2.2
 paver>=1.3
 sphinx-autobuild>=0.7.1
 runestone @ https://github.com/Petlja/RunestoneComponents-Petlja/archive/master.zip
