Cyr2Latn module

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ paver>=1.3
 sphinx-autobuild>=0.7.1
 runestone @ https://github.com/Petlja/RunestoneComponents-Petlja/archive/master.zip
 click>=7.0
+cyrtranslit>=0.4
