--- a/doc/index-example.yaml
+++ b/doc/index-example.yaml
@@ -14,63 +14,53 @@ description:
     - Цртање – кругови, правоугаоници, елипсе
     - Цртање – израчунавање координата
   externalLinks: # opciono 
-    - link:
-      text:
-      href:
-    - link:
-      text:
+    - text: 
+      href: 
+    - text:
       href:
 
 lessons:
-  - archived: # guidi svih lekcija koje su ranije postojale moraju da se navedu ovde
-    - guid: 3ced8ac6-8be7-4921-bea7-dccf89a7cc79
-    - guid: 29a3a23a-0cdb-4a2b-ad6b-611d36c39db5
-  - lesson:
-      title: Час 1
-      guid: c2c651cd-53d9-4a3d-ba4f-650b8422f0bc
-      description: Прва лекција
-      activities:
-        - archived: # guid-i svih aktivnosti koje su ranije postojale moraju da se navedu ovde
-          - guid: de4d8ced-7457-4257-a156-250bdb711d65
-          - guid: 22752682-f23f-4df7-b590-e22780fda0a3
-        - reading:
-          title: Увод
-          file: 1uvod.rst # fajl se označava onako kako je u source folderu, pa se u zavisnosti od tipa fajla prilagođava ponašanje
-          description: #opciono
-          guid: 71c00155-f7f3-410d-8019-e88d22cb7f01/cas1 
-          #ova varijantasa /alias je samo za fazu mibracije, poenta je da ako nije pronađen, onda se traži po aliasu, 
-          #pa ako se nađe i guid je NULL, upisuje se, a inače se javlja greška. Kada se tako postave guidi, posle može da se obriše /alias
-        - reading:
-          title: Након увода
-          file: 2nakon-uvoda.pdf
-          description: ...
-          guid: 71c00155-f7f3-410d-8019-e88d22cb7f01
-        - video:
-          title: ...
-          url: https://www.youtube.com/watch?v=flu3-ntQIlE # može da se navede i ceo YT url, a može i samo ID
-          description: ...
-          guid: 61657689-aa6b-46c9-87da-51869d6477ee
-        - audio: # obo treba izbegavati, uvek može da se napravi video, ne znam da li uopšte da ostavljamo
-          title: ...
-          file: audio1.mp3 
-          description: ...
-          guid: 858460bd-d146-413f-aeab-54608084025b
-        - quiz: 
-          title: Тест
-          file: test1.rst # kada uvedemo struktuirani format, ovde će moći da stoji test1.quiz.yaml
-          description: ...
-          guid: a725f29a-b323-4a1a-b52d-6eae141bc243
-    - lesson: Čas 2
+  - title: Час 1
+    guid: c2c651cd-53d9-4a3d-ba4f-650b8422f0bc
+    description: Прва лекција
+    activities:
+      - type: reading
+        title: Увод
+        file: 1uvod.rst # fajl se označava onako kako je u source folderu, pa se u zavisnosti od tipa fajla prilagođava ponašanje
+        description: #opciono
+        guid: 71c00155-f7f3-410d-8019-e88d22cb7f01/cas1 
+        #ova varijantasa /alias je samo za fazu migracije, poenta je da ako nije pronađen, onda se traži po aliasu, 
+        #pa ako se nađe i guid je NULL, upisuje se, a inače se javlja greška. Kada se tako postave guidi, posle može da se obriše /alias
+      - type: reading
+        title: Након увода
+        file: 2nakon-uvoda.pdf
+        description: ...
+        guid: 71c00155-f7f3-410d-8019-e88d22cb7f01
+      - type: video
+        title: ...
+        url: https://www.youtube.com/watch?v=flu3-ntQIlE # može da se navede i ceo YT url, a može i samo ID
+        description: ...
+        guid: 61657689-aa6b-46c9-87da-51869d6477ee
+      - type: audio # obo treba izbegavati, uvek može da se napravi video, ne znam da li uopšte da ostavljamo
+        title: ...
+        file: audio1.mp3 
+        description: ...
+        guid: 858460bd-d146-413f-aeab-54608084025b
+      - type: quiz 
+        title: Тест
+        file: test1.rst # kada uvedemo struktuirani format, ovde će moći da stoji test1.quiz.yaml
+        description: ...
+        guid: a725f29a-b323-4a1a-b52d-6eae141bc243
+    archived-activities: # ne smeta ni ako se ostave drugi atribudi iz aktivnosti, ali se gleda samo guid
+      - guid: de4d8ced-7457-4257-a156-250bdb711d65
+      - guid: 22752682-f23f-4df7-b590-e22780fda0a3
+  - title: Čas 2
         # ...
 
+archived-lessons: # ne smeta ni ako se ostave drugi atribudi iz aktivnosti, ali se gleda samo guid
+  - guid: 3ced8ac6-8be7-4921-bea7-dccf89a7cc79
+  - guid: 29a3a23a-0cdb-4a2b-ad6b-611d36c39db5
 
-        
-
-
-
-      
-
-    
 
 
 
