--- a/petljadoc/project-templates/course/_sources/index.yaml
+++ b/petljadoc/project-templates/course/_sources/index.yaml
@@ -1,62 +1,40 @@
-courseId: informatika-osmi
-lang: sr-Cyrl # ako je ćirilica onda sve ide na ćirilici, a u deploymentu će se ako treba konvertovati na latinicu natpis na kartici
-title: Информатика и рачунарство за седми разред
-# logo sam izostavio, to bi imalo smisla samo ako bi se zadavao u okviru izvornog repoa
+courseId: courseID 
+lang: en
+title: Petljadoc Course
 description:
-  willLearn: # list
-    - како да направим
-    - како да исправим
+  willLearn: 
+    - Preview of Petljadoc course
   requirements:
-    - знаш да програмираш
-    - имаш инсталирано
+    - Petljadoc
+    - Runestone
+    - Sphinx
   toc:
-    - Цртање – Координате, боје дужи
-    - Цртање – кругови, правоугаоници, елипсе
-    - Цртање – израчунавање координата
-  externalLinks: # opciono 
-    - link:
-      text:
-      href:
-    - link:
-      text:
-      href:
+    - Intro to Petljadoc INDEX.yaml
+  externalLinks:  
+    - text: Sphinx Docs
+      href: https://www.sphinx-doc.org/en/master/usage/restructuredtext/index.html
+    - text: Petljadoc
+      href: https://github.com/Petlja/PetljaDoc/blob/master/README.md
+    - text: Runestone Interactive
+      href: https://github.com/RunestoneInteractive/overview
+
 
 lessons:
-  - archived: # guidi svih lekcija koje su ranije postojale moraju da se navedu ovde
-    - guid: 3ced8ac6-8be7-4921-bea7-dccf89a7cc79
-    - guid: 29a3a23a-0cdb-4a2b-ad6b-611d36c39db5
-  - lesson:
-      title: Час 1
-      guid: c2c651cd-53d9-4a3d-ba4f-650b8422f0bc
-      description: Прва лекција
-      activities:
-        - archived: # guid-i svih aktivnosti koje su ranije postojale moraju da se navedu ovde
-          - guid: de4d8ced-7457-4257-a156-250bdb711d65
-          - guid: 22752682-f23f-4df7-b590-e22780fda0a3
-        - reading:
-          title: Увод
-          file: 1uvod.rst # fajl se označava onako kako je u source folderu, pa se u zavisnosti od tipa fajla prilagođava ponašanje
-          description: #opciono
-          guid: 71c00155-f7f3-410d-8019-e88d22cb7f01/cas1 
-          #ova varijantasa /alias je samo za fazu mibracije, poenta je da ako nije pronađen, onda se traži po aliasu, 
-          #pa ako se nađe i guid je NULL, upisuje se, a inače se javlja greška. Kada se tako postave guidi, posle može da se obriše /alias
-        - video:
-          title: Video
-          url: https://www.youtube.com/watch?v=flu3-ntQIlE # može da se navede i ceo YT url, a može i samo ID
-          description: ...
-          guid: 61657689-aa6b-46c9-87da-51869d6477ee
-        - quiz: 
-          title: Тест
-          file: test1.rst # kada uvedemo struktuirani format, ovde će moći da stoji test1.quiz.yaml
-          description: ...
-          guid: a725f29a-b323-4a1a-b52d-6eae141bc243
-  - lesson: 
-      title: Час 2
-      guid: c2c651cd-53d9-4a3d-ba4f-650b8422f0bc
-      description: Прва лекција
-      activities:
-        - reading:
-          title: Након 
-          file: 2uvod.rst
-          description: ...
-          guid: 71c00155-f7f3-410d-8019-e88d22cb7f01
+  - title: Lesson 1
+    guid: c2c651cd-53d9-4a3d-ba4f-650b8422f0bc
+    description: Your first lesson. Description is not required attribute
+    activities:
+      - type: reading
+        title: Intro
+        file: intro.rst 
+        description: #Optional
+        guid: 71c00155-f7f3-410d-8019-e88d22cb7f01
+      - type: video
+        title: Video activity for your lesson
+        decription: Nice video
+        url: https://www.youtube.com/watch?v=2KYuzJKemXw
+        guid: 978760d0-a133-4ffd-af30-85fdb38aa384
+      - type: quiz
+        title: Test your students
+        file: quiz.rst
+        guid: dd96bf63-e558-4540-95a6-00b96e45e3ef
