long and short desc to index

--- a/petljadoc/project-templates/course/_sources/index.yaml
+++ b/petljadoc/project-templates/course/_sources/index.yaml
@@ -17,6 +17,9 @@ description:
       href: https://github.com/Petlja/PetljaDoc/blob/master/README.md
     - text: Runestone Interactive
       href: https://github.com/RunestoneInteractive/overview
+  longDescription: |
+    Long description
+  shortDescription: Shrot description
 
 
 lessons:
