--- a/petljadoc/project-templates/course/_sources/index.yaml
+++ b/petljadoc/project-templates/course/_sources/index.yaml
@@ -18,7 +18,7 @@ description:
     - text: Runestone Interactive
       href: https://github.com/RunestoneInteractive/overview
   longDescription: |
-    Long description
+    This is an example of a long description...
   shortDescription: Shrot description
 
 
