--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
 include README.md requirements.txt LICENSE
 
-recursive-include petljadoc/bootstrap_petlja_theme theme.conf *.html 
+recursive-include petljadoc/themes theme.conf *.html *.mo
 recursive-include petljadoc/runestone_ext *.js *.css *.txt
 
-graft petljadoc/bootstrap_petlja_theme/static
-graft petljadoc/project-templates 
+graft petljadoc/themes/course_theme/static
+graft petljadoc/themes/runestone_theme/static
+graft petljadoc/project-templates
