--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-docutils<=0.16
-sphinx>=1.8.5,<2.2
+docutils>=0.16
+sphinx-toolbox>= 3.0.0
+sphinx>= 5.3.0
 paver>=1.3
 runestone-petljadoc>=3.1.2.0
 click>=7.0
