new export mode

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,5 +7,6 @@ graft petljadoc/themes/course_theme/static
 graft petljadoc/themes/runestone_theme/static
 graft petljadoc/themes/bc_theme/static
 graft petljadoc/project-templates
-
+graft petljadoc/scorm-templates
+graft petljadoc/scorm-proxy-templates
 graft petljadoc/nb-templates
